# copilotkit-app

./: .env-template  .gitignore  CLAUDE.md  README.md  package-lock.json  package.json  pyproject.toml
backend/: a2ui.py  agents.py  main.py  test_contracts.py
backend/agents/: __init__.py  a2ui.py  claude.py  open_gen_ui.py  openai.py  todos.py
docs/: PydanticAI.md  pydantic-ai-flow.html
docs/superpowers/plans/: 2026-05-23-controlled-generative-ui.md  2026-05-23-pydantic-ai-copilotkit-app.md
docs/superpowers/specs/: 2026-05-23-a2ui-declarative-genui-design.md  2026-05-23-controlled-generative-ui-design.md  2026-05-23-pydantic-ai-copilotkit-app-design.md
frontend/: index.html  package-lock.json  package.json  server.ts  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  TodoPage.tsx  agents.ts  globals.css  main.tsx
frontend/src/catalog/: definitions.ts  index.ts  renderers.tsx
frontend/src/components/: flight-card.tsx  pie-chart.tsx  todo-list.tsx
frontend/src/hooks/: use-example-suggestions.ts
