[project]
name = "copilotkit-pydantic-ai-app"
version = "0.1.0"
description = "L2 notebook app: CopilotKit + Pydantic AI agents over AG-UI"
requires-python = ">=3.12"
dependencies = [
    "pydantic-ai-slim[ag-ui,openai,anthropic]>=1.102.0",
    "fastapi>=0.115",
    "uvicorn>=0.34",
    "python-dotenv>=1.0",
]

[tool.uv]
package = false
